--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>WatchLog - ホーム</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <header>
         <h1><a href="/">WatchLog</a></h1>
     </header>
     <main>
-        <h2>SerinaさんのWatchLog</h2>
+        <h2>あなたのWatchLog</h2>
         <button onclick="location.href='/view'">作品一覧へ</button>
         <button onclick="location.href='/add'">作品登録画面へ</button>
     </main>
