--- a/templates/view_records.html
+++ b/templates/view_records.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WatchLog - 作品一覧</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <header>
