--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WatchLog - 新規登録</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <header>
