--- a/templates/view_records.html
+++ b/templates/view_records.html
@@ -10,7 +10,7 @@
         <h1><a href="/">WatchLog</a></h1>
     </header>
     <main>
-        <h2>Serinaさんの登録作品一覧</h2>
+        <h2>あなたの登録作品一覧</h2>
         <div>
             <div>
                 {% for record in records %}
