--- a/templates/view_records.html
+++ b/templates/view_records.html
@@ -25,6 +25,7 @@
             </div>
             {% endfor %}
         </div>
+        <button onclick="location.href='/add'">追加登録</button>
     </main>
 </body>
 </html>
