--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -22,6 +22,12 @@
             <input type="radio" name="rating" value="3">3
             <input type="radio" name="rating" value="4">4
             <input type="radio" name="rating" value="5">5<br>
+            <label for="rating">ジャンル</label>
+            <input type="radio" name="tag" value="1" required>漫画
+            <input type="radio" name="tag" value="2">アニメ
+            <input type="radio" name="tag" value="3">映画
+            <input type="radio" name="tag" value="4">ドラマ
+            <input type="radio" name="tag" value="5">バラエティ<br>
             <button type="submit">登録</button>
         </form>
     </main>
