--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -29,6 +29,9 @@
             <input type="radio" name="tag" value="4">ドラマ
             <input type="radio" name="tag" value="5">バラエティ<br>
             <button type="submit">登録</button>
+        </br>
+        </br>
+        <button onclick="location.href='/logout'">ログアウト</button>
         </form>
     </main>
 </body>
