--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,12 @@
         <h1><a href="/">WatchLog</a></h1>
     </header>
     <main>
-        <h2>あなたのWatchLog</h2>
+        <h2>{{ user_name }}さんのWatchLog</h2>
         <button onclick="location.href='/view'">作品一覧へ</button>
         <button onclick="location.href='/add'">作品登録画面へ</button>
+        </br>
+        </br>
+        <button onclick="location.href='/logout'">ログアウト</button>
     </main>
 </body>
 </html>
