--- a/templates/view_records.html
+++ b/templates/view_records.html
@@ -27,6 +27,9 @@
             {% endfor %}
         </div>
         <button onclick="location.href='/add'">追加登録</button>
+        </br>
+        </br>
+        <button onclick="location.href='/logout'">ログアウト</button>
     </main>
 </body>
 </html>
