button add->view

--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -29,6 +29,7 @@
             <input type="radio" name="tag" value="4">ドラマ
             <input type="radio" name="tag" value="5">バラエティ<br>
             <button type="submit">登録</button>
+        <button onclick="location.href='/view'">一覧ページへ</button>
         </br>
         </br>
         <button onclick="location.href='/logout'">ログアウト</button>
