--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
             <label for="title">ユーザー名</label>
             <input type="text" name="user_name" required><br>
             <label for="title">パスワード</label>
-            <input type="text" name="password" required><br>
+            <input type="password" name="password" required><br>
             <button type="submit">ログイン</button>
             <!-- エラーがある場合に表示 -->
             {% if error %}
