remove login_user

--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -17,7 +17,7 @@
             <label for="title">パスワード</label>
             <input type="text" name="password" required><br>
             <button type="submit">新規登録</button>
-            <p>アカウントをお持ちの方は<a href="{{ url_for('login_user') }}">こちら</a></p>
+            <p>アカウントをお持ちの方は<a href="{{ url_for('home') }}">こちら</a></p>
         </form>
     </main>
 </body>
